Move css out of layout

--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -620,3 +620,6 @@ ul.the-icons li {
 ul.the-icons li:hover {
 	background:#eee;
 }
+
+#top-button { color: white; }
+a#top-button:hover { text-decoration: none;}
