--- a/app/views/podcasts/show.html.haml
+++ b/app/views/podcasts/show.html.haml
@@ -8,6 +8,17 @@
   .ac
     %audio{src: @podcast.audio_url, width: "600", height: "30"}
 
+/ AddThis Button BEGIN
+.addthis_toolbox.addthis_default_style
+  %a.addthis_button_facebook_like{"fb:like:layout" => "button_count"}
+  %a.addthis_button_tweet
+  %a.addthis_button_pinterest_pinit
+  %a.addthis_counter.addthis_pill_style
+:javascript
+  var addthis_config = {"data_track_addressbar":true};
+%script{:src => "http://s7.addthis.com/js/300/addthis_widget.js#pubid=podmedics", :type => "text/javascript"}
+/ AddThis Button END
+
 .row
   .span12.well
     %p= @podcast.description
@@ -21,10 +32,7 @@
   .span12
     #disqus_thread
     :javascript
-      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
       var disqus_shortname = 'thedigitaldoc'; // required: replace example with your forum shortname
-
-      /* * * DON'T EDIT BELOW THIS LINE * * */
       (function() {
           var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
           dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
