--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -38,3 +38,4 @@
             Conference
         %p On Saturday we will teach you to use technology and tools to make everyday tasks (email, audits, task management, keeping up with literature, collaborative working and research) more efficient and fun.
         %p On Sunday we will be introducing app creation - how to do it, what is involved and how to convince others to help you do it. We will demystify the software development process and show you how to bend technology to meet your needs. We will also shed light on how NHS IT works (or doesn't work!).
+        %p= link_to "View the schedule", schedule_path, class: "btn btn-large", title: "Schedule"
