--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -5,7 +5,7 @@
     .span1 09:00-09:30
     .span7
         %h3 Registration
-        .description Delegates arrive, coffee, conference packs etc.
+        .description Delegates arrive, coffee
             
 .event.row
     .span1 09:30-09:45
@@ -71,11 +71,11 @@
         %h3 Session 3
         %ul
             %li
-                %h4 Social Media, Education and Medicine
+                %h4 Social networking: why and how?
                 .by Dr Anne Marie Cunningham
             %li
                 %h4 Database and Audits
-                .by Dr Wai Keong Wong
+                .by Dr Wai Keong Wong and Dr Ed Wallitt
             %li
                 %h4 Getting the most out of your iPad/iPhone - apps and hacks
                 .by Tom Lewis
@@ -84,7 +84,7 @@
     .span1 17:00-17:15
     .span7
         %h3 Close
-        .description Sum up, thanks etc
+        .description Sum up, feedback etc
         
 .event.row
     .span1 17:15-
@@ -100,7 +100,7 @@
     .span1 09:00-09:30
     .span7
         %h3 Registration
-        .description Delegates arrive, coffee, conference packs etc.
+        .description Delegates arrive, coffee
             
 .event.row
     .span1 09:30-09:45
@@ -116,87 +116,71 @@
         .by Dr Jack Barker (CCIO, Kings College Hospital)
 
 .event.row
-    .span1 10:15-10:45
+    .span1 10:15-11:00
+    .span7
+        %h3 How to Learn to Code
+        .by Jeremy Walker & Dr Ed Wallitt
+
+.event.row
+    .span1 11:00-11:45
+    .span7
+        %h3 An Introduction to Computer Science
+        .by Dr Stevan Wing
+
+.event.row
+    .span1 11:45-12:00
+    .span7
+        %h3 Refreshments
+
+.event.row
+    .span1 12:00-12:45
+    .span7
+        %h3 Building websites and webapps
+        .by Jeremy Walker
+
+.event.row
+    .span1 12:45-13:15
+    .span7
+        %h3 Lunch
+
+.event.row
+    .span1 13:15-14:00
     .span7
         %h3 Anatomy and Physiology of NHS IT in the bigger world
         .by Rob Dyke (HANDI Director and Tactix4)
         
 .event.row
-    .span1 10:45-11:00
+    .span1 14:00-15:30
+    .span7
+        %h3 Afternoon Session - App Ideas Factories
+        %ul
+            %li
+                %h4 Educational Stream
+            %li
+                %h4 Patient Information/Experience Stream
+            %li
+                %h4 Doctor Productivity Stream
+     
+.event.row
+    .span1 15:30-15:45
     .span7
         %h3 Refreshments
-         
-.event.row
-    .span1 11:00-11:15
-    .span7
-        %h3 Lightning Talks 1 - Novel ideas for Applications
+        
         
 .event.row
-    .span1 11:00-12:30
+    .span1 15:45-16:45
     .span7
-        %h3 Session 1
-        %ul
-            %li
-                %h4 How to Learn to Code
-                .by Jeremy Walker & Dr Ed Wallitt
-            %li
-                %h4 Creating Websites and Podcasts using different tools
-            %li
-                %h4 Free thinking space for collaboration (Unconference)
+        %h3 Idea Factory Discussion (presentation of one idea from each group)
+        .by A chaired panel discussion to explore generated ideas and how they could be built and implemented.
+        
         
 .event.row
-    .span1 12:30-13:45
-    .span7
-        %h3 Lunch
-        
-.event.row
-    .span1 13:45-14:00
-    .span7
-        %h3 Lightning Talks 2 - Novel ideas for Applications
-        
-.event.row
-    .span1 14:00-15:00
-    .span7
-        %h3 Session 2
-        %ul
-            %li
-                %h4 Building an iPhone app in 90 mins
-                .by Dr Ed Wallitt
-            %li
-                %h4 An Introduction to Computer Science
-                .by Dr Stevan Wing
-            %li
-                %h4 Busting the myth about Information Governance and Security
-            %li
-                %h4 Free thinking space for collaboration (Unconference)
-        
-.event.row
-    .span1 15:00-15:30
-    .span7
-        %h3 Coffee
-        
-.event.row
-    .span1 15:30-17:00
-    .span7
-        %h3 Session 3 - Taking an Idea from Inception to Reality
-        %ul
-            %li
-                %h4 Idea Factory
-                .by Small Groups
-            %li
-                %h4 Lightning Talks
-                .by 2 min presentation on ideas.
-            %li
-                %h4 Different channels for developing your idea
-                .by A chaired panel discussion
-        
-.event.row
-    .span1 17:00-17:15
+    .span1 16:45-17:00
     .span7
         %h3 Close
-        .description Sum up, thanks etc
+        .description Sum up, thanks, feedback etc
         
 .event.row
-    .span1 17:15-
+    .span1 17:00-
     .span7
         %h3 Onward Drinks and Networking
