--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -120,37 +120,42 @@
     .span7
         %h3 How to Learn to Code
         .by Jeremy Walker & Dr Ed Wallitt
+        
+.event.row
+    .span1 11:00-11:15
+    .span7
+        %h3 Refreshments
 
 .event.row
-    .span1 11:00-11:45
+    .span1 11:15-12:00
     .span7
         %h3 An Introduction to Computer Science
         .by Dr Stevan Wing
 
 .event.row
-    .span1 11:45-12:00
+    .span1 12:00-12:30
     .span7
         %h3 Refreshments
 
 .event.row
-    .span1 12:00-12:45
+    .span1 12:30-13:15
     .span7
         %h3 Building websites and webapps
         .by Jeremy Walker
 
 .event.row
-    .span1 12:45-13:15
+    .span1 13:15-14:00
     .span7
         %h3 Lunch
 
 .event.row
-    .span1 13:15-14:00
+    .span1 14:00-14:45
     .span7
         %h3 Anatomy and Physiology of NHS IT in the bigger world
         .by Rob Dyke (HANDI Director and Tactix4)
         
 .event.row
-    .span1 14:00-15:30
+    .span1 14:45-15:30
     .span7
         %h3 Afternoon Session - App Ideas Factories
         %ul
