--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -130,7 +130,7 @@
     .span1 11:15-12:00
     .span7
         %h3 An Introduction to Computer Science
-        .by Dr Stevan Wing
+        .by Jeremy Walker & Dr Stevan Wing
 
 .event.row
     .span1 12:00-12:30
