updated the website for after conf

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,8 +26,8 @@
                                 %li{class: menu_item_class(:speakers)}= link_to "Speakers", speakers_path
                                 %li{class: menu_item_class(:schedule)}= link_to "Schedule", schedule_path
                                 %li{class: menu_item_class(:podcasts)}= link_to "Podcast", podcasts_path
-                                %li
-                                    %button.btn{class:"btn-primary"}= link_to "Book Now", "http://thedigitaldoctor-estw.eventbrite.co.uk/", id:"top-button"
+                                / %li
+                                /     %button.btn{class:"btn-primary"}= link_to "Book Now", "http://thedigitaldoctor-estw.eventbrite.co.uk/", id:"top-button"
                                     
             #content.container= yield
             
@@ -39,7 +39,7 @@
                         %h3 Quick links
                         %ul
                             %li= link_to "Home", "/" 
-                            %li=link_to "Book a place", "http://thedigitaldoctor-estw.eventbrite.co.uk/"
+                            / %li=link_to "Book a place", "http://thedigitaldoctor-estw.eventbrite.co.uk/"
                             %li= link_to "The Podcast", podcasts_path
                             
                     .span4{class:"social-networks"}
@@ -59,7 +59,7 @@
             .container
                 .row
                     .span4
-                        Website &copy; 2012 Podmedics Ltd
+                        Website &copy; The DigiDocs
                     .span4
                         %i{class:"icon-phone"}
                         &nbsp; 
