--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -1,5 +1,6 @@
 %div{class:"hero-unit"}
-    %h1 Saturday's Schedule
+    %h1 Schedule for the December 2012 Conference (now over)
+    %h2{style: "margin-top: 30px;"} Saturday's Schedule
             
 .event.row
     .span1 09:00-09:30
