--- a/app/views/podcasts/index.html.haml
+++ b/app/views/podcasts/index.html.haml
@@ -17,4 +17,7 @@
     %hr
 
 .well.ac
-  %h3 More episodes coming soon!
+  %h3 
+    Don't miss an episode. 
+    %a{href: "http://feeds.feedburner.com/TheDigitalDoctorPodcast"}
+      Subscribe to our RSS feed
