--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -15,12 +15,12 @@
         %h1.lead
             %b The London Conference
             %br
-            Saturday & Sunday 1st/2nd December, 2012 - Covent Garden
+            The conference is now over. Stay tuned for #digidoc13!
         
     .span4
-        %p.ac
-            %a{class:"btn btn-large btn-primary", href:"http://thedigitaldoctor-estw.eventbrite.co.uk/", title:""}
-                %b Book Now!
+        / %p.ac
+        /     %a{class:"btn btn-large btn-primary", href:"http://thedigitaldoctor-estw.eventbrite.co.uk/", title:""}
+        /         %b Book Now!
                 
 %hr
 
@@ -38,4 +38,4 @@
             Conference
         %p On Saturday we will teach you to use technology and tools to make everyday tasks (email, audits, task management, keeping up with literature, collaborative working and research) more efficient and fun.
         %p On Sunday we will be introducing app creation - how to do it, what is involved and how to convince others to help you do it. We will demystify the software development process and show you how to bend technology to meet your needs. We will also shed light on how NHS IT works (or doesn't work!).
-        %p= link_to "View the schedule", schedule_path, class: "btn btn-large", title: "Schedule"
+        %p= link_to "View the schedule for the last conference", schedule_path, class: "btn btn-large", title: "Schedule"
