--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,9 +5,8 @@
         =stylesheet_link_tag    "application", :media => "all"
         =javascript_include_tag "application"   
         =csrf_meta_tags
-        
         %link{href:'http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800', rel:'stylesheet', type:'text/css'}
-            
+        = yield :head
     %body
         %header#header
             .navbar
