add google analytics

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -67,3 +67,4 @@
                         %i{class:"icon-envelope"}
                         &nbsp; 
                         info@thedigitaldoc.co.uk
+        = render 'analytics'
