--- a/app/views/podcasts/show.html.haml
+++ b/app/views/podcasts/show.html.haml
@@ -26,7 +26,7 @@
 .row
   .span12
     %h3 Show Notes
-    %p.show_notes= simple_format(@podcast.notes)
+    %p.show_notes= @podcast.notes
 
 .row
   .span12
