--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -1,5 +1,5 @@
-%div{class:"hero-unit"}
-    %h1 Schedule for the December 2012 Conference (now over)
+.hero-unit
+    %h1 Schedule for Last Conference (December 2012) 
     %h2{style: "margin-top: 30px;"} Saturday's Schedule
             
 .event.row
