--- a/app/views/podcasts/edit.html.erb
+++ b/app/views/podcasts/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing podcast</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @podcast %> |
-<%= link_to 'Back', podcasts_path %>
+<div class='row'>
+  <div class='span12'>
+    <div class='page-header'>
+      <h1>Edit podcast</h1>
+    </div>
+    <%= render 'form' %>
+  </div>
+</div>
