--- a/app/views/podcasts/new.html.erb
+++ b/app/views/podcasts/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New podcast</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', podcasts_path %>
+<div class='row'>
+  <div class='span12'>
+    <div class='page-header'>
+      <h1>New podcast</h1>
+    </div>
+    <%= render 'form' %>
+  </div>
+</div>
