--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -13,15 +13,16 @@
 .row
     .span8
         %h1.lead
-            %b The London Conference
+            %b The Digital Doctor Conference London 2013
             %br
-            The conference is now over. Stay tuned for #digidoc13!
-        
+            Join us for #digidoc13 on the 9th and 10th of Novemeber   
     .span4
-        / %p.ac
-        /     %a{class:"btn btn-large btn-primary", href:"http://thedigitaldoctor-estw.eventbrite.co.uk/", title:""}
-        /         %b Book Now!
-                
+        %p.ac
+        %a{class: "btn btn-large btn-primary", 
+            href: "http://thedigitaldoctor-estw.eventbrite.co.uk/", 
+            title: "The Digital Doctor Conference 2013: Eventbrite page",
+            } 
+            %b Book now! 
 %hr
 
 .row
@@ -38,4 +39,4 @@
             Conference
         %p On Saturday we will teach you to use technology and tools to make everyday tasks (email, audits, task management, keeping up with literature, collaborative working and research) more efficient and fun.
         %p On Sunday we will be introducing app creation - how to do it, what is involved and how to convince others to help you do it. We will demystify the software development process and show you how to bend technology to meet your needs. We will also shed light on how NHS IT works (or doesn't work!).
-        %p= link_to "View the schedule for the last conference", schedule_path, class: "btn btn-large", title: "Schedule"
+        %p= link_to "View the provisionat schedule", schedule_path, class: "btn btn-large", title: "Schedule"
