Change layout with seperate home layout and include new copyright dates and book links

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -1,5 +1,5 @@
 .hero-unit
-    %h1 Schedule for Last Conference (December 2012) 
+    %h1 Schedule for #DigiDoc13 
     %h2{style: "margin-top: 30px;"} Saturday's Schedule
             
 .event.row
