--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -2,6 +2,20 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+p.strap span {
+  position: absolute;
+  bottom: 620px;
+  left: 0.4em;
+  font-size: 8em;
+  font-weight: 800;
+  color: #fff;
+  padding: 0 20px;
+  width: 40%;
+  line-height: 150%;
+}
+
+
 h2.timetable {
     margin-bottom:20px;
 }
