--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,28 +1,30 @@
 %hr
 
-.container
-  .row
-    / portfolio item
-    .span4.project.zoom{"data-tags" => "design"}
-      %a.thumbnail{href: ""}
-        / imae
-        %img{src: "http://placehold.it/300x200/222/fff"}/
-        / name
-        %b.project-name Title
-    / end portfolio item
-    / portfolio item
-    .span4.project.zoom{"data-tags" => "design"}
-      %a.thumbnail{href: ""}
-        / image
-        %img{src: "http://placehold.it/300x200/555/fff"}/
-        / name
-        %b.project-name Title
-    / end portfolio item
-    / portfolio item
-    .span4.project.zoom{"data-tags" => "design"}
-      %a.thumbnail{href: ""}
-        / image
-        %img{src: "http://placehold.it/300x200/999/fff"}/
-        / name
-        %b.project-name Title
-    / end portfolio item
+
+.row
+  .span8
+    %h1.lead
+      %b The Digital Doctor Conference London 2013
+      %br
+      Join us for #digidoc13 on the 9th and 10th of Novemeber   
+  .span4
+    %p.ac
+      %a{class: "btn btn-large btn-primary", 
+         href: "http://thedigitaldoctor-estw.eventbrite.co.uk/", 
+         title: "The Digital Doctor Conference 2013: Eventbrite page",
+         } 
+        %b Book now! 
+%hr
+
+.row
+  .span6
+    %h2
+      %span.grey Our Vision
+    %p We are a small group of doctors and IT professionals who want to help clinicians harness the power of modern technology to improve their efficiency and level of patient care.
+    %p We also want to make it easier for clinicians to get started implementing their own tech ideas.
+
+  .span6
+    %h2
+      %span.grey The Conference
+    %p On Saturday we will teach you to use technology and tools to make everyday tasks (email, audits, task management, keeping up with literature, collaborative working and research) more efficient and fun.
+    %p On Sunday we will be introducing app creation - how to do it, what is involved and how to convince others to help you do it. We will demystify the software development process and show you how to bend technology to meet your needs. We will also shed light on how NHS IT works (or doesn't work!).
