Add schedule placeholer

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -1,192 +1,195 @@
 .hero-unit
-    %h1 Schedule for #DigiDoc13 
-    %h2{style: "margin-top: 30px;"} Saturday's Schedule
-            
-.event.row
-    .span1 09:00-09:30
-    .span7
-        %h3 Registration
-        .description Delegates arrive, coffee
-            
-.event.row
-    .span1 09:30-09:45
-    .span7
-        %h3 Introduction
-        .by Dr Ed Wallitt
-        .description A introduction to the day and it's purpose 
-          
-.event.row
-    .span1 09:45-10:30
-    .span7
-        %h3 Why Doctors need to be digital
-        .by Dr Martin Murphy
-        
-.event.row
-    .span1 10:30-11:00
-    .span7
-        %h3 Refreshments
-        
-.event.row
-    .span1 11:00-12:30
-    .span7
-        %h3 Session 1
-        %ul
-            %li
-                %h4 Email and the power of Inbox Zero
-                .by Dr Stevan Wing
-            %li
-                %h4 Keeping up to date (RSS feeds, journals etc)
-                .by Dr Wai Keong Wong
-            %li
-                %h4 Getting Things Done - efficient task management
-                .by Dr Ed Wallitt
-        
-.event.row
-    .span1 12:30-13:30
-    .span7
-        %h3 Lunch
-        
-.event.row
-    .span1 13:30-15:00
-    .span7
-        %h3 Session 2
-        %ul
-            %li
-                %h4 Social networking: why and how?
-                .by Dr Anne Marie Cunningham
-            %li
-                %h4 Getting things done - efficient task management
-                .by Dr Ed Wallitt
-            %li
-                %h4 Software for Research
-                .by Dr Stevan Wing
-        
-.event.row
-    .span1 15:00-15:30
-    .span7
-        %h3 Refreshments
-        
-.event.row
-    .span1 15:30-17:00
-    .span7
-        %h3 Session 3
-        %ul
-            %li
-                %h4 Social networking: why and how?
-                .by Dr Anne Marie Cunningham
-            %li
-                %h4 Database and Audits
-                .by Dr Wai Keong Wong and Dr Ed Wallitt
-            %li
-                %h4 Getting the most out of your iPad/iPhone - apps and hacks
-                .by Tom Lewis
-        
-.event.row
-    .span1 17:00-17:15
-    .span7
-        %h3 Close
-        .description Sum up, feedback etc
-        
-.event.row
-    .span1 17:15-
-    .span7
-        %h3 Onward Drinks and Networking
-        
-%hr
-
-%div{class:"hero-unit"}
-    %h1 Sunday's Schedule
-            
-.event.row
-    .span1 09:00-09:30
-    .span7
-        %h3 Registration
-        .description Delegates arrive, coffee
-            
-.event.row
-    .span1 09:30-09:45
-    .span7
-        %h3 Introduction
-        .by Dr Ed Wallitt
-        .description A introduction to the day and it's purpose 
-          
-.event.row
-    .span1 09:45-10:15
-    .span7
-        %h3 Anatomy and Physiology of NHS IT in an Acute Hospital
-        .by Dr Jack Barker (CCIO, Kings College Hospital)
-
-.event.row
-    .span1 10:15-11:00
-    .span7
-        %h3 How to Learn to Code
-        .by Jeremy Walker & Dr Ed Wallitt
-        
-.event.row
-    .span1 11:00-11:15
-    .span7
-        %h3 Refreshments
-
-.event.row
-    .span1 11:15-12:00
-    .span7
-        %h3 An Introduction to Computer Science
-        .by Jeremy Walker & Dr Stevan Wing
-
-.event.row
-    .span1 12:00-12:30
-    .span7
-        %h3 Refreshments
-
-.event.row
-    .span1 12:30-13:15
-    .span7
-        %h3 Building websites and webapps
-        .by Jeremy Walker
-
-.event.row
-    .span1 13:15-14:00
-    .span7
-        %h3 Lunch
-
-.event.row
-    .span1 14:00-14:45
-    .span7
-        %h3 Anatomy and Physiology of NHS IT in the bigger world
-        .by Rob Dyke (HANDI Director and Tactix4)
-        
-.event.row
-    .span1 14:45-15:30
-    .span7
-        %h3 Afternoon Session - App Ideas Factories
-        %ul
-            %li
-                %h4 Educational Stream
-            %li
-                %h4 Patient Information/Experience Stream
-            %li
-                %h4 Doctor Productivity Stream
-     
-.event.row
-    .span1 15:30-15:45
-    .span7
-        %h3 Refreshments
-        
-        
-.event.row
-    .span1 15:45-16:45
-    .span7
-        %h3 Idea Factory Discussion (presentation of one idea from each group)
-        .by A chaired panel discussion to explore generated ideas and how they could be built and implemented.
-        
-        
-.event.row
-    .span1 16:45-17:00
-    .span7
-        %h3 Close
-        .description Sum up, thanks, feedback etc
-        
-.event.row
-    .span1 17:00-
-    .span7
-        %h3 Onward Drinks and Networking
+    %h1 Schedule for #DigiDoc13 is coming soon... 
+    %br
+    %h3 ...watch this space!
+-# 
+-#     %h2{style: "margin-top: 30px;"} Saturday's Schedule
+-#             
+-# .event.row
+-#     .span1 09:00-09:30
+-#     .span7
+-#         %h3 Registration
+-#         .description Delegates arrive, coffee
+-#             
+-# .event.row
+-#     .span1 09:30-09:45
+-#     .span7
+-#         %h3 Introduction
+-#         .by Dr Ed Wallitt
+-#         .description A introduction to the day and it's purpose 
+-#           
+-# .event.row
+-#     .span1 09:45-10:30
+-#     .span7
+-#         %h3 Why Doctors need to be digital
+-#         .by Dr Martin Murphy
+-#         
+-# .event.row
+-#     .span1 10:30-11:00
+-#     .span7
+-#         %h3 Refreshments
+-#         
+-# .event.row
+-#     .span1 11:00-12:30
+-#     .span7
+-#         %h3 Session 1
+-#         %ul
+-#             %li
+-#                 %h4 Email and the power of Inbox Zero
+-#                 .by Dr Stevan Wing
+-#             %li
+-#                 %h4 Keeping up to date (RSS feeds, journals etc)
+-#                 .by Dr Wai Keong Wong
+-#             %li
+-#                 %h4 Getting Things Done - efficient task management
+-#                 .by Dr Ed Wallitt
+-#         
+-# .event.row
+-#     .span1 12:30-13:30
+-#     .span7
+-#         %h3 Lunch
+-#         
+-# .event.row
+-#     .span1 13:30-15:00
+-#     .span7
+-#         %h3 Session 2
+-#         %ul
+-#             %li
+-#                 %h4 Social networking: why and how?
+-#                 .by Dr Anne Marie Cunningham
+-#             %li
+-#                 %h4 Getting things done - efficient task management
+-#                 .by Dr Ed Wallitt
+-#             %li
+-#                 %h4 Software for Research
+-#                 .by Dr Stevan Wing
+-#         
+-# .event.row
+-#     .span1 15:00-15:30
+-#     .span7
+-#         %h3 Refreshments
+-#         
+-# .event.row
+-#     .span1 15:30-17:00
+-#     .span7
+-#         %h3 Session 3
+-#         %ul
+-#             %li
+-#                 %h4 Social networking: why and how?
+-#                 .by Dr Anne Marie Cunningham
+-#             %li
+-#                 %h4 Database and Audits
+-#                 .by Dr Wai Keong Wong and Dr Ed Wallitt
+-#             %li
+-#                 %h4 Getting the most out of your iPad/iPhone - apps and hacks
+-#                 .by Tom Lewis
+-#         
+-# .event.row
+-#     .span1 17:00-17:15
+-#     .span7
+-#         %h3 Close
+-#         .description Sum up, feedback etc
+-#         
+-# .event.row
+-#     .span1 17:15-
+-#     .span7
+-#         %h3 Onward Drinks and Networking
+-#         
+-# %hr
+-# 
+-# %div{class:"hero-unit"}
+-#     %h1 Sunday's Schedule
+-#             
+-# .event.row
+-#     .span1 09:00-09:30
+-#     .span7
+-#         %h3 Registration
+-#         .description Delegates arrive, coffee
+-#             
+-# .event.row
+-#     .span1 09:30-09:45
+-#     .span7
+-#         %h3 Introduction
+-#         .by Dr Ed Wallitt
+-#         .description A introduction to the day and it's purpose 
+-#           
+-# .event.row
+-#     .span1 09:45-10:15
+-#     .span7
+-#         %h3 Anatomy and Physiology of NHS IT in an Acute Hospital
+-#         .by Dr Jack Barker (CCIO, Kings College Hospital)
+-# 
+-# .event.row
+-#     .span1 10:15-11:00
+-#     .span7
+-#         %h3 How to Learn to Code
+-#         .by Jeremy Walker & Dr Ed Wallitt
+-#         
+-# .event.row
+-#     .span1 11:00-11:15
+-#     .span7
+-#         %h3 Refreshments
+-# 
+-# .event.row
+-#     .span1 11:15-12:00
+-#     .span7
+-#         %h3 An Introduction to Computer Science
+-#         .by Jeremy Walker & Dr Stevan Wing
+-# 
+-# .event.row
+-#     .span1 12:00-12:30
+-#     .span7
+-#         %h3 Refreshments
+-# 
+-# .event.row
+-#     .span1 12:30-13:15
+-#     .span7
+-#         %h3 Building websites and webapps
+-#         .by Jeremy Walker
+-# 
+-# .event.row
+-#     .span1 13:15-14:00
+-#     .span7
+-#         %h3 Lunch
+-# 
+-# .event.row
+-#     .span1 14:00-14:45
+-#     .span7
+-#         %h3 Anatomy and Physiology of NHS IT in the bigger world
+-#         .by Rob Dyke (HANDI Director and Tactix4)
+-#         
+-# .event.row
+-#     .span1 14:45-15:30
+-#     .span7
+-#         %h3 Afternoon Session - App Ideas Factories
+-#         %ul
+-#             %li
+-#                 %h4 Educational Stream
+-#             %li
+-#                 %h4 Patient Information/Experience Stream
+-#             %li
+-#                 %h4 Doctor Productivity Stream
+-#      
+-# .event.row
+-#     .span1 15:30-15:45
+-#     .span7
+-#         %h3 Refreshments
+-#         
+-#         
+-# .event.row
+-#     .span1 15:45-16:45
+-#     .span7
+-#         %h3 Idea Factory Discussion (presentation of one idea from each group)
+-#         .by A chaired panel discussion to explore generated ideas and how they could be built and implemented.
+-#         
+-#         
+-# .event.row
+-#     .span1 16:45-17:00
+-#     .span7
+-#         %h3 Close
+-#         .description Sum up, thanks, feedback etc
+-#         
+-# .event.row
+-#     .span1 17:00-
+-#     .span7
+-#         %h3 Onward Drinks and Networking
