Make editing speakers work and add simple http authentication

--- a/app/views/speakers/_form.html.erb
+++ b/app/views/speakers/_form.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :linkedin_url %><br />
-    <%= f.text_field :linkedin_url %>
+    <%= f.text_field :linkedin_id %>
   </div>
   <div class="field">
     <%= f.label :github_handle %><br />
