--- a/app/views/speakers/_form.html.erb
+++ b/app/views/speakers/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.text_field :position %>
   </div>
   <div class="field">
+    <%= f.label :display_order %><br />
+    <%= f.text_field :display_order %>
+  </div>
+  <div class="field">
     <%= f.label :bio %><br />
     <%= f.text_area :bio %>
   </div>
