Remove absolute positioned text, reduce background size

--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -1,7 +1,5 @@
 = render partial: 'layouts/header'
 .row
-    %p.strap 
-        %span #DIGIDOC13 
-    = image_tag('digidocmono.png')                        
+    = image_tag('digidocmono.jpg')                        
     #content.container= yield
 = render partial: 'layouts/footer'
