Add links to new eventbrite page

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -9,7 +9,7 @@
   .span4
     %p.ac
       %a{class: "btn btn-large btn-primary", 
-         href: "http://thedigitaldoctor-estw.eventbrite.co.uk/", 
+         href: "http://digidoc13.eventbrite.co.uk", 
          title: "The Digital Doctor Conference 2013: Eventbrite page",
          } 
         %b Book now! 
