--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -26,4 +26,4 @@
                                 %li{class: menu_item_class(:schedule)}= link_to "Schedule", schedule_path
                                 %li{class: menu_item_class(:podcasts)}= link_to "Podcast", podcasts_path
                                 %li
-                                    %button.btn{class:"btn-primary"}= link_to "Book Now", "http://thedigitaldoctor-estw.eventbrite.co.uk/", id:"top-button"
+                                    %button.btn{class:"btn-primary"}= link_to "Book Now", "http://digidoc13.eventbrite.co.uk", id:"top-button"
