Fix facebook link and add blank targets to social

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -11,8 +11,18 @@
             .span4{class:"social-networks"}
                 %h3 Stay in touch
                 %p Stay in touch on social networks
-                =link_to "", "https://www.facebook.com/pages/The-Digital-Doctor/331213556974049", class: "icon-facebook", title:"Follow us on Facebook"
-                =link_to "", "https://twitter.com/TheDigiDoc", title:"Follow us on Twitter", class:"icon-twitter"
+                
+                =link_to "", "https://www.facebook.com/thedigidocs",
+                class: "icon-facebook", 
+                title:"Follow us on Facebook",
+                target: "_blank"
+                
+                =link_to "", 
+                "https://twitter.com/TheDigiDoc", 
+                title:"Follow us on Twitter", 
+                target: "_blank",
+                class:"icon-twitter"
+            
             .span4
                 %h3 Newsletter
                 %p Subscribe to our newsletter and be the first to know about the conference news!
