Changed BCS logo

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -17,8 +17,8 @@
   .span3
     = link_to(image_tag("bcs_alpha.jpg", 
       alt: "BCS logo", 
-      width: 120, 
-      height: 90,
+      width: 160, 
+      height: 120,
       title: "BCS health"),
       "http://www.bcs.org/category/6044",
       target: "_blank")
@@ -31,7 +31,8 @@
     %small.muted#muted_link
       %i 
         Supported by 
-        = link_to("BCS Health", "http://www.bcs.org/category/6044",
+        = link_to("BCS Health", 
+          "http://www.bcs.org/category/6044",
           target: "_blank")
 
 
