add further detail to schedule day 1 streams outline

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -31,10 +31,14 @@
     %ul
       %li
         %h4 Research and Collaboration
+        %p e.g. alternatives to email and word .doc collaboration. The basics of version control. Introduction to R statistics
       %li
         %h4 Education and Learning
+        %p e.g. eportfolios, using social media as a doctor,
+        %p
       %li
         %h4 Digital Productivity
+        %p e.g. Inbox zero, Getting Things Done, managing data overload (RSS/Read Tt Later), paperless workflows
 
 .event.row
   .span1 12:00-12:45
