Updated Schedule and fixed typos

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -18,6 +18,7 @@
   .span7
     %h3 Plenary (title to be announced)
     .by Dr Martin Murphy
+    %p Clinical Director at NHS Wales Information Service 
 
 .event.row
   .span1 10:30-11:00
@@ -114,6 +115,7 @@
       %li
         %h4 Information Design
         .by Dr Wai Keong Wong
+        .description Presenting information to help you make better decisions. An introduction to Edward Tufte and Bret Victor
       %li
         %h4 How a website actually works
         .by Dr Stevan Wing
@@ -129,7 +131,7 @@
 .event.row
   .span1 13:30-14:15
   .span7
-    %h3 Taking you ideas forward: user stories, wireframes and prototypes
+    %h3 Taking your ideas forward: user stories, wireframes and prototypes
     .by Dr Ed Wallitt
 
 .event.row
