add new title for gtd talk

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -38,7 +38,7 @@
         %p e.g. eportfolios, using social media as a doctor,
         %p
       %li
-        %h4 Digital Productivity
+        %h4 Digital Minimalism - Taming mind and machine 
         %p e.g. Inbox zero, Getting Things Done, managing data overload (RSS/Read Tt Later), paperless workflows
 
 .event.row
