--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -42,7 +42,7 @@
   .span6
     %h2
       %span.grey Our Vision
-    %p We are a small group of doctors and IT professionals who want to help make things better. We welcome everyone; health professionals, patients and public and want to help them harness the power of modern technology to improve their efficiency and level of patient care.
+    %p We are a small group of doctors and IT professionals who want to help make things better. We welcome everyone; health professionals, patients and the public and want to help them harness the power of modern technology to improve their efficiency and level of patient care.
     %p We also want to make it easier for clinicians to get started implementing their own tech ideas.
 
   .span6
