--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -7,18 +7,27 @@
     .description Delegates arrive, coffee
 
 .event.row
-  .span1 09:30-09:45
+  .span1 09:30-09:35
   .span7
     %h3 Introduction
     .by Dr Wai Keong Wong
     .description Welcome and introduction to the day
 
 .event.row
+  .span1 09:35-09:45
+  .span7
+    %h3 From a Doctor to CEO of a Startup to Health IT Executive
+    .by Dr Justin Whatling 
+    %p Chair, BCS Health
+    .description Justin's support has made this event possible. Here he will share his journey from being a senior house office in neurology to senior director of strategic consulting in a multinational Health IT company.
+
+.event.row
   .span1 09:45-10:30
   .span7
-    %h3 Plenary (title to be announced)
+    %h3 Plenary: Harnessing the Power of Technology and the Internet to Strengthen Relationships with Patients
     .by Dr Martin Murphy
-    %p Clinical Director at NHS Wales Information Service 
+    %p Clinical Director at NHS Wales Information Service
+    .description Martin challenges us to redefine our relationship with our patients in a new era where clinical information will be in control of patients and access to healthcare professionals can be as easy as a click away. How can we do all this safely in the light of the Snowden revelations? 
 
 .event.row
   .span1 10:30-11:00
@@ -54,7 +63,7 @@
 .event.row
   .span1 13:45-14:30
   .span7
-    %h3 Plenary TBA
+    %h3 Debate/ Discussion: The future of publicshing: Is this the end for medical journals? What's their relevance in the era of the internet? TBC
     .by Speaker TBA
 
 .event.row
@@ -106,6 +115,7 @@
   .span7
     %h3 Anatomy and Physiology of NHS IT
     .by Dr Wai Keong Wong
+    .description Learn about how the discharge letter you type reaches the GP. How information flows in the NHS. Why it is so hard for IT systems to talk to each other. Equip yourself with the right vocabulatory and knowledge (Spine/ N3/ Caldicott) detect BS.
 
 .event.row
   .span1 11:45-12:30
@@ -115,13 +125,14 @@
       %li
         %h4 Information Design
         .by Dr Wai Keong Wong
-        .description Presenting information to help you make better decisions. An introduction to Edward Tufte and Bret Victor
+        .description Presenting information to help clinicians and patients make better decisions. An introduction to Edward Tufte and Bret Victor
       %li
         %h4 How a website actually works
         .by Dr Stevan Wing
       %li
         %h4 Should you learn to code? If so, how do you do it?
         .by Dr Ed Wallitt
+        .description Why teaching doctors to code is not the same as asking a software developer to perform major heart surgery
 
 .event.row
   .span1 12:30-13:30
@@ -133,6 +144,7 @@
   .span7
     %h3 Taking your ideas forward: user stories, wireframes and prototypes
     .by Dr Ed Wallitt
+    .description Presenting your idea in a way that software developers (and investors!) can understand
 
 .event.row
   .span1 14:30-16:00
