Modify front page copy

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -5,7 +5,7 @@
     %h1#conf_strap
       %b The Digital Doctor Conference London 2013
     %h1.lead
-      Join us for #digidoc13 on the 9th and 10th of November 
+      Join us for #digidoc13 on the 9th and 10th of November
   .span4
     %p.ac
       %a{class: "btn btn-large btn-primary", 
@@ -43,7 +43,7 @@
     %h2
       %span.grey Our Vision
     %p We are a small group of doctors and IT professionals who want to help make things better. We welcome everyone; health professionals, patients and the public and want to help them harness the power of modern technology to improve their efficiency and level of patient care.
-    %p We also want to make it easier for clinicians to get started implementing their own tech ideas.
+    %p We believe that a revolution in healthcare IT will radically change the way we work and has the power to really make a difference to care. However we also understand how important it is that clinicians are involved in the process and help lead the charge. So we want to make it easier for clinicians to get started implementing their own tech ideas.
 
   .span6
     %h2
