--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -63,7 +63,7 @@
 .event.row
   .span1 13:45-14:30
   .span7
-    %h3 Debate/ Discussion: The future of publicshing: Is this the end for medical journals? What's their relevance in the era of the internet? TBC
+    %h3 Debate/ Discussion: The future of publishing: Is this the end for medical journals? What's their relevance in the era of the internet? TBC
     .by Speaker TBA
 
 .event.row
