Corrected title of Justin's talk

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -16,7 +16,7 @@
 .event.row
   .span1 09:35-09:45
   .span7
-    %h3 From a Doctor to CEO of a Startup to Health IT Executive
+    %h3 From a Doctor to Startup Founder to Health IT Executive
     .by Dr Justin Whatling 
     %p Chair, BCS Health
     .description Justin's support has made this event possible. Here he will share his journey from being a senior house office in neurology to senior director of strategic consulting in a multinational Health IT company.
