Add index page copy

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -4,8 +4,12 @@
   .span8
     %h1#conf_strap
       %b The Digital Doctor Conference London 2013
-    %h1.lead
+    %h2.lead
+      %i Mastering Personal IT, to Revolutionising NHS IT
+    
+    %h2.lead
       Join us for #digidoc13 on the 9th and 10th of November
+      
   .span4
     %p.ac
       %a{class: "btn btn-large btn-primary", 
@@ -13,6 +17,10 @@
          title: "The Digital Doctor Conference 2013: Eventbrite page",
          } 
         %b Book now! 
+    %p
+      Medical students go 
+      %b free 
+      if you refer two friends
 .row
   .span3
     = link_to(image_tag("bcs_alpha.jpg", 
