--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -5,7 +5,7 @@
                 %h3 Quick links
                 %ul
                     %li= link_to "Home", "/" 
-                    %li=link_to "Book a place", "http://thedigitaldoctor-estw.eventbrite.co.uk/"
+                    %li=link_to "Book a place", "http://digidoc13.eventbrite.co.uk/"
                     %li= link_to "The Podcast", podcasts_path
                     
             .span4{class:"social-networks"}
